# Md

./: .gitignore
VALEN-Vault/: .env.example  README.md  docker-compose.yml
VALEN-Vault/android/: build.gradle.kts  settings.gradle.kts
VALEN-Vault/android/app/: build.gradle.kts  proguard-rules.pro
VALEN-Vault/android/app/src/main/: AndroidManifest.xml
VALEN-Vault/android/app/src/main/res/values/: strings.xml  themes.xml
VALEN-Vault/brain/: Dockerfile  README.md  auth.py  config.py  gerar_hash.py  main.py  orchestrator.py  requirements.txt  skill_loader.py
VALEN-Vault/cli/: requirements.txt  valen_chat.py
VALEN-Vault/core/: CMakeLists.txt  Makefile
VALEN-Vault/core/include/: indexer.hpp  link_resolver.hpp  note.hpp  vault_engine.hpp
VALEN-Vault/core/src/: indexer.cpp  link_resolver.cpp  main.cpp  note.cpp  vault_engine.cpp
VALEN-Vault/deploy/: DEPLOY_ANDROID.md  DEPLOY_CONTABO.md  DEPLOY_ORACLE.md  contabo_meta_llama33.sh
VALEN-Vault/index/: index.json
VALEN-Vault/mini-api/: mini_api.py  requirements.txt  valen-mini-api.service
VALEN-Vault/notes/: VALEN_Vault_Engine_v1_Master_Prompt.md  agents.md  arquitetura.md  decisao-cpp.md  memory-system.md  roadmap.md  visual-layer.md
VALEN-Vault/notes/1.0.0/: INSTRUÇÃO OBRIGATÓRIA DE EXECUÇÃO.md  Instrução Inicial.md  VALEN_v1_0_0_MASTER_PROMPT_v4_ULTRA_DETALHADO.md
VALEN-Vault/notes/1.1.0/: 01_VALEN_Thinking_Matrix_Canvas.md  02_VALEN_Voice_Reactive_Orb_System_Ultra_Avancado_v2.md  README_Index.md
VALEN-Vault/notes/FUTUROS TOOLS/: Universal_inicio.md  análise_links_ia.md  astraz_asset_bundler.md  astraz_code_packer.md  astraz_db_syncer.md  astraz_doc_compiler.md  astraz_lead_enricher.md  astraz_secure_vault.md  astraz_web_analyzer.md  implementar_tools.md  moto_de_criacao_mult.md  tools_implementar_01.md  tools_implementar_02.md  valen_mythos_engine_prompt.md
VALEN-Vault/notes/cli/: valen-cli-master-prompt.md
VALEN-Vault/skills/: skill_database.py  skill_dev.py  skill_sysadmin.py
(+8 files in other folders)
